# AE729

./: .buildinfo  Module_1_3.html  genindex.html  intro.html  main.py  objects.inv  phase_coex.html  pyproject.toml  search.html  searchindex.js  testing.html
_build/.doctrees/: intro.doctree  markdown-notebooks.doctree  notebooks.doctree
_build/html/: intro.html
_build/jupyter_execute/: markdown-notebooks.ipynb
_sources/: intro.md  phase_coex.ipynb
aerosp729-4/: _config.yml  _toc.yml  intro.md
aerosp729-4/.ipynb_checkpoints/: Module_1_3-checkpoint.ipynb
aerosp729-4/_build/.doctrees/: Module_1_3.doctree  environment.pickle  intro.doctree  markdown.doctree  og.doctree  phase_coex.doctree  testing.doctree
aerosp729-4/_build/.doctrees/hw/: HW1_soln.doctree  hw2.doctree  hw3.doctree
aerosp729-4/_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  og.html  phase_coex.html  search.html  searchindex.js  testing.html
aerosp729-4/_build/html/_sources/: intro.md  phase_coex.ipynb  testing.ipynb  testing.md
aerosp729-4/_build/html/_sources/hw/: hw3.ipynb
aerosp729-4/_build/html/hw/: HW1_soln.html  hw2.html
aerosp729-4/_build/jupyter_execute/: og.ipynb  phase_coex.ipynb  testing.ipynb
aerosp729-4/_build/jupyter_execute/hw/: HW1_soln.ipynb  hw2.ipynb  hw3.ipynb
aerosp729-4/hw/: LGM50_0_5A.csv  LGM50_2_5A.csv  LGM50_5_0A.csv  LiRuSn.txt  hw2.ipynb  ocv.py  pulse.csv
aerosp729-4/hw/.ipynb_checkpoints/: HW1_soln-checkpoint.ipynb
hw/: hw2.html  hw3.html
