[project]
name = "eess-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.4.post1",
    "matplotlib>=3.10.6",
    "niceplots>=2.6.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "sphinxcontrib-tikz>=0.4.20",
]
